# yosys-bin

./: .buildinfo  PLUGIN_INTEGRATION_PLAN.md  building.html  components.html  dvflow.html  genindex.html  index.html  installation.html  ivpm.yaml  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js
.doctrees/: building.doctree  components.doctree  dvflow.doctree  environment.pickle  index.doctree  installation.doctree  overview.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: dvflow.rst.txt  index.rst.txt  installation.rst.txt
docs/: Makefile  building.rst  components.rst  conf.py  installation.rst  overview.rst  requirements.txt
scripts/: build.sh  pyproject-release.toml
src/dv_flow/libyosys/: __ext__.py  flow.dv  synth.py
src/dv_flow/libyosys/share/yosys-synthesis/: SKILL.md
src/dv_flow/libyosys/share/yosys-synthesis/references/: REFERENCE.md
